[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/cluster_bomb_single.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Cluster_bomb.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.42386

[node name="Cluster_bomb" type="RigidBody2D"]
position = Vector2( -0.0124269, -0.00998545 )
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="cluster_bomb_single" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Cluster_point1" type="Position2D" parent="."]
position = Vector2( 3.5, 0 )

[node name="Cluster_point2" type="Position2D" parent="."]
position = Vector2( 0, 3.5 )
rotation = 1.5708

[node name="Cluster_point3" type="Position2D" parent="."]
position = Vector2( -3.5, 0 )
rotation = 3.14159

[node name="Cluster_point4" type="Position2D" parent="."]
position = Vector2( 0, -3.5 )
rotation = -1.5708

[node name="Cluster_point5" type="Position2D" parent="."]
position = Vector2( 2.5, -2.5 )
rotation = -0.785398

[node name="Cluster_point6" type="Position2D" parent="."]
position = Vector2( 2.5, 2.5 )
rotation = 0.785398

[node name="Cluster_point7" type="Position2D" parent="."]
position = Vector2( -2.5, 2.48345 )
rotation = 2.35619

[node name="Cluster_point8" type="Position2D" parent="."]
position = Vector2( -2.5, -2.5 )
rotation = -2.35619

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
